--- a/css/mixin.scss
+++ b/css/mixin.scss
@@ -11,18 +11,18 @@
 }
 //---color----//
 
-$red : #b5132a;
+$red : #F73624;
 $hcolor:#2c3e50;
 $para:#787878;
-$siteColor:#1F4E5F;
-$text2:#F5A91D;
 $border-width: 4px;
 // $border-color: #ffc107;
 $white:#fff;
 $cap:capitalize;
+$upper:uppercase;
 $none:none;
 $around:space-around;
 $between:space-between;
+$end:flex-end;
 //-----font----//
 
 $heading:'AlegreyaRegular';
