--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@
     font-size: 15px;
     color: #2c3e50; background: #fff;
     font-family: 'RalewayRegular';
-    overflow-x: hidden;
+    line-height: 1.5;
     }
     html, body, div, span, applet, object, iframe,
     h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr,
@@ -44,4 +44,195 @@
     
     .container{
         @include container;
+    }
+
+    main{
+        header{
+            width: 100%;
+            .top-social-bar{
+                width: 100%;
+                background: $red;
+                padding: .4rem 0;
+                .child-wrp{
+                    @include flex;
+                    justify-content:$between;
+                    width: 90%;
+                    margin: 0 auto;
+                    .L1{
+                     @include flex;
+                     justify-content:$between;
+                     p{
+                         margin: 0 .5rem;
+                         font-family: 'open-sans';
+                         font-weight: bold;
+                         &:last-child{
+                            font-weight: normal;
+                         }
+                     }
+                    }
+                  .L_cmn01{
+                        p{
+                            text-transform: $cap;
+                            font-weight: bold;
+                            font-size: 1em;
+                            color: $white;
+                            i{
+                                padding: .5rem.5rem;
+                                font-size: 1.1em;
+                                color:$white;
+                                vertical-align: middle;
+                                transition: $transition;
+                                margin: 0 .2rem;
+                                &:hover{
+                                    transition: $transition;
+                                    cursor: pointer;
+                                    background: #ffffff59;
+                                    border-radius: 50%;
+                                    color: $white;
+                                   }
+                            }
+                        }
+                    }
+                }
+             }
+             .Nav-wrp{
+                 width: 100%;
+                 background: #ffffffa8;
+                 position: absolute;
+                 padding: .2rem 0;
+                nav{
+                    @include flex;
+                    justify-content: $between;
+                    width: 90%;
+                    margin: 0 auto;
+                    .logo{
+                        width: 35%;
+                        a{
+                        img{
+                            max-width: 70%;
+                        }
+                        }
+                    }
+                    .nav-item{
+                        width: 60%;
+                        padding: 1rem 0;
+                        ul{
+                            @include flex;
+                            justify-content: $end;
+                            li{
+                                list-style-type: $none;
+                                margin: 0 .7rem;
+                                a{
+                                    color: #000;
+                                    font-size: 1.2em;
+                                    text-transform: $upper;
+                                    font-family: $heading;
+                                    word-spacing: 1px;
+                                    letter-spacing: 1px;
+                                    transition: $transition;
+                                    padding: 0 0 .4rem;
+                                    &:hover{
+                                        color: $red;
+                                        transition: $transition;
+                                    }
+                                    i{
+                                        vertical-align: text-top;
+                                    }
+                                }   
+                                .hvr-underline-from-left:before {
+                                    background: #f73624;
+                                    height: 2px;
+                                }
+                            }
+                            .hair-care{
+                                position: relative;
+                                .drop_down{
+                                  position: absolute;
+                                  top: 89px;
+                                  left: -61px;
+                                  width: 281px;
+                                  background: #f73624a6;
+                                  justify-content: flex-start;
+                                  li{
+                                      padding: 1rem 0;
+                                      margin: 0 0;
+                                      width: 100%;
+                                      border-bottom: 1px solid #ffffff78;
+                                    a{
+                                        color: #fff;
+                                        padding: 0 0 0 1rem;
+                                        font-size: 1em;
+                                        font-weight: 500;
+                                    }
+                                  }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        //-----banner------//
+        .Banner_Wrapper{
+            background: url(../image/banner.png)no-repeat;
+            background-size: 100% 100%;
+            height: 700px;
+            width: 100%;
+            .Banner_Content {
+                /* padding: 10rem 0 0; */
+                @include flex;
+                justify-content: flex-start;
+                height: 700px;
+                .Banner_child{
+                    width: 50%;
+                    h1{
+                        font-size: 3.1em;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        word-spacing: 1px;
+                        font-weight: 550;
+                    }
+                    p{
+                        font-size: 1.3em;
+                        letter-spacing: 1px;
+                        word-spacing: 1px;
+                        color: #000;
+                        font-weight: 500;
+                        padding: 1rem 0 2rem;
+                    }
+                    a{
+                        padding: 1rem 2rem;
+                        font-size: 1.2em;
+                        display: inline-block;
+                        background: $red;
+                        color: $white;
+                        border-radius: 100px;
+                        margin: 1rem 0 0;
+                        i.fas.fa-chevron-right {
+                            font-size: 14px;
+                            padding: 0 0 0 .5rem;
+                        }
+                        &:hover{
+                            // background: #000;
+                            color: #fff;
+                        }
+                    }
+                    .hvr-bounce-to-right{
+                        &:hover{
+                            &::before{
+                            border-radius: 100px;
+                            color: #fff;
+                            background: #000000;
+                          } 
+                        }
+                        &::before{
+                            border-radius: 100px;
+                            color: #fff;
+                            background: #000000;
+                          } 
+                    }
+                }
+            }
+        }
     }
