--- a/css/style.scss
+++ b/css/style.scss
@@ -121,7 +121,7 @@
                             justify-content: $end;
                             li{
                                 list-style-type: $none;
-                                margin: 0 .7rem;
+                                margin: 0 .9rem;
                                 a{
                                     color: #000;
                                     font-size: 1.2em;
@@ -146,6 +146,12 @@
                             }
                             .hair-care{
                                 position: relative;
+                                // &:hover{
+                                //     .drop_down{
+                                //         display: block;
+                                //         transition: $transition;
+                                //     }
+                                // }
                                 .drop_down{
                                   position: absolute;
                                   top: 89px;
@@ -153,6 +159,7 @@
                                   width: 281px;
                                   background: #f73624a6;
                                   justify-content: flex-start;
+                                  display:none;
                                   li{
                                       padding: 1rem 0;
                                       margin: 0 0;
