--- a/css/style.scss
+++ b/css/style.scss
@@ -100,6 +100,7 @@
                  background: #ffffffa8;
                  position: absolute;
                  padding: .2rem 0;
+                 z-index: 3;
                 nav{
                     @include flex;
                     justify-content: $between;
@@ -119,6 +120,7 @@
                         ul{
                             @include flex;
                             justify-content: $end;
+                            position: relative;
                             li{
                                 list-style-type: $none;
                                 margin: 0 .9rem;
@@ -152,28 +154,34 @@
                                 //         transition: $transition;
                                 //     }
                                 // }
-                                .drop_down{
-                                  position: absolute;
-                                  top: 89px;
-                                  left: -61px;
-                                  width: 281px;
-                                  background: #f73624a6;
-                                  justify-content: flex-start;
-                                  display:none;
-                                  li{
-                                      padding: 1rem 0;
-                                      margin: 0 0;
-                                      width: 100%;
-                                      border-bottom: 1px solid #ffffff78;
-                                    a{
-                                        color: #fff;
-                                        padding: 0 0 0 1rem;
-                                        font-size: 1em;
-                                        font-weight: 500;
+                            }
+                            .drop_down{
+                                position: absolute;
+                                top: 89px;
+                                left: 36%;
+                                width: 281px;
+                                background: #f73624a6;
+                                justify-content: flex-start;
+                                display:none;
+                                li{
+                                    padding: 1rem 0;
+                                    margin: 0 0;
+                                    transition: $transition;
+                                    width: 100%;
+                                    border-bottom: 1px solid #ffffff78;
+                                    &:hover{
+                                        background: #f73624;
+                                        transition: $transition;
+                                        padding-left: .5rem;  
                                     }
+                                  a{
+                                      color: #fff;
+                                      padding: 0 0 0 1rem;
+                                      font-size: 1em;
+                                      font-weight: 500;
                                   }
                                 }
-                            }
+                              }
                         }
                     }
                 }
@@ -182,64 +190,390 @@
 
         //-----banner------//
         .Banner_Wrapper{
-            background: url(../image/banner.png)no-repeat;
-            background-size: 100% 100%;
-            height: 700px;
-            width: 100%;
-            .Banner_Content {
-                /* padding: 10rem 0 0; */
-                @include flex;
-                justify-content: flex-start;
-                height: 700px;
-                .Banner_child{
-                    width: 50%;
-                    h1{
-                        font-size: 3.1em;
-                        line-height: 1.5;
-                        letter-spacing: 1px;
-                        word-spacing: 1px;
-                        font-weight: 550;
+            .banner-child{
+                &:hover{
+                    .owl-nav{
+                        opacity: 1;
+                        transition: $transition;
                     }
-                    p{
-                        font-size: 1.3em;
-                        letter-spacing: 1px;
-                        word-spacing: 1px;
-                        color: #000;
-                        font-weight: 500;
-                        padding: 1rem 0 2rem;
+                }
+                .owl-nav{
+                    opacity: 0;
+                    transition: $transition;
+                }
+                .banner-sub-child{
+                    background: url(../image/banner.png)no-repeat;
+                    background-size: 100% 100%;
+                    height: 700px;
+                    width: 100%;
+                  .Banner_Content {
+                    /* padding: 10rem 0 0; */
+                    @include flex;
+                    justify-content: flex-start;
+                    height: 700px;
+                    .Banner_child{
+                        width: 50%;
+                        h1{
+                            font-size: 3.1em;
+                            line-height: 1.5;
+                            letter-spacing: 1px;
+                            word-spacing: 1px;
+                            font-weight: 550;
+                        }
+                        p{
+                            font-size: 1.3em;
+                            letter-spacing: 1px;
+                            word-spacing: 1px;
+                            color: #000;
+                            font-weight: 500;
+                            padding: 1rem 0 2rem;
+                        }
+                        a{
+                            padding: 1rem 2rem;
+                            font-size: 1.2em;
+                            display: inline-block;
+                            background: $red;
+                            color: $white;
+                            border-radius: 100px;
+                            margin: 1rem 0 0;
+                            i.fas.fa-chevron-right {
+                                font-size: 14px;
+                                padding: 0 0 0 .5rem;
+                            }
+                            &:hover{
+                                // background: #000;
+                                color: #fff;
+                            }
+                        }
+                        .hvr-bounce-to-right{
+                            &:hover{
+                                &::before{
+                                border-radius: 100px;
+                                color: #fff;
+                                background: #000000;
+                            } 
+                            }
+                            &::before{
+                                border-radius: 100px;
+                                color: #fff;
+                                background: #000000;
+                            } 
+                        }
+                    }
+                   }
+              }
+              .banner-sub-child2{
+                background: url(../image/banner2.png)no-repeat;
+                background-size: 100% 100%;
+                height: 700px;
+                width: 100%;
+              }
+              .banner-sub-child3{
+                background: url(../image/banner3.png)no-repeat;
+                background-size: 100% 100%;
+                height: 700px;
+                width: 100%;
+              }
+
+              .owl-dots {
+                position: absolute;
+                bottom: 35px;
+                left: 50%;
+                .owl-dot {
+                    width: 15px;
+                    height: 15px;
+                    background: #f7362459!important;
+                    border-radius: 50%;
+                    margin: 0 .5rem;
+                    outline: none;
+                    border: none;
+                    /* border: 4px solid #f9bcbc!important; */
+                 }
+                 .owl-dot.active {
+                    background: #f73624!important;
+                }
+              }
+              .owl-next {
+                position: absolute;
+                right: 28px;
+                top: 44%;
+                font-size: 6em!important;
+                color: #f7362487!important;
+                outline: none;
+                border: none;
+                transition: $transition;
+                &:hover{
+                    color: #f73624!important;
+                    transition: $transition;
+                }
+            }
+            .owl-prev{
+                @extend .owl-next;
+                left: 28px;
+            }
+           } 
+        }
+// ----service---sectionnn---
+    .Service_wrapper{
+        width: 100%;
+        .Service_heading{
+            width: 100%;
+            @include flex;
+            justify-content: $between;
+            h2{
+                width: 30%;
+                font-size: 2em;
+                line-height: 1.5;
+                letter-spacing: 1px;
+                word-spacing: 1px;
+                text-transform: $cap;
+                font-weight: bold;
+                padding: 2rem 0 1rem;
+                span{
+                    color: $red;
+                }
+            }
+            p{
+                width: 65%;
+                line-height: 1.5;
+                letter-spacing: 1px;
+                word-spacing: 1px;
+            }
+        }
+       .Service_content{
+          .Grid_wrp{
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-gap: 10px;
+            padding: 10px;
+             grid-template-columns: auto auto auto;
+              .Grid-item_cmn01{
+                  width: 100%;
+                //   height: 300px;
+                 position: relative;
+                 &:hover{
+                    .grid-hvr-content{
+                        opacity: 1;
+                        transition: $transition;
+                        .Hvr_cnt{
+                            &::before{
+                                width: 245px;
+                                height: 245px;
+                                transition: all .5s ease-in-out;
+                            }
+                            &::after{
+                                width: 245px;
+                                height: 245px;
+                                transition: all .5s ease-in-out;
+                            }
+                        }
+                    }
+                    .bottom_Bar{
+                       // opacity: 0;
+                        transition: $transition;
+                    }
+                 }
+                 .bottom_Bar{
+                     position: absolute;
+                     bottom: 0;
+                     width: 100%;
+                     padding: .5rem .5rem;
+                     background: #0000008f;
+                     @include flex;
+                     justify-content:$between;
+                     transition: $transition;
+                     z-index: 9;
+                    h2{
+                     color: $white;
+                     text-align: center;
+                     text-transform: $upper;
+                     font-weight: 500;
+                     font-family: 'Ralewaythin';
+                     font-size: 1.275em;
+                     line-height: 1.5;
+                     letter-spacing: 1px;
                     }
                     a{
-                        padding: 1rem 2rem;
-                        font-size: 1.2em;
                         display: inline-block;
-                        background: $red;
-                        color: $white;
-                        border-radius: 100px;
-                        margin: 1rem 0 0;
-                        i.fas.fa-chevron-right {
-                            font-size: 14px;
-                            padding: 0 0 0 .5rem;
-                        }
-                        &:hover{
-                            // background: #000;
-                            color: #fff;
+                        background: #f73624;
+                        padding: .7rem 1rem;
+                        border-radius: 5px;
+                        color: #fff;
+                        box-shadow: inset 0px 0px 4px 1px #000000d6;
+                        font-size: 1.1em;
+                        text-transform: $upper;
+                    }
+                    .hvr-radial-out{
+                        &::before{
+                            background: #000000;
                         }
                     }
-                    .hvr-bounce-to-right{
-                        &:hover{
-                            &::before{
-                            border-radius: 100px;
-                            color: #fff;
-                            background: #000000;
-                          } 
+                 }
+                 .grid-hvr-content{
+                     width: 100%;
+                     height: 100%;
+                     position: absolute;
+                     @include flex;
+                     background: #f736249c;
+                     z-index: 4;
+                     opacity: 0;
+                     transition: $transition;
+                     .Hvr_cnt{
+                         text-align: center;
+                         position: relative;
+                         &::before{
+                             content: '';
+                             width: 0px;
+                             height: 0px;
+                             position: absolute;
+                             left: -100px;
+                             top: -213px;
+                             border-top: 2px solid #fff;
+                             border-left: 2px solid #fff;
+                             transition: all .5s ease-in-out;
+                         }
+                         &::after{
+                            content: '';
+                            width: 0px;
+                            height: 0px;
+                            position: absolute;
+                            right: -100px;
+                            bottom: -156px;//-213px;
+                            border-bottom: 2px solid #fff;
+                            border-right: 2px solid #fff;
+                            transition: all .5s ease-in-out;
                         }
-                        &::before{
-                            border-radius: 100px;
-                            color: #fff;
-                            background: #000000;
-                          } 
+                         h2{
+                             font-size: 1.9em;
+                             line-height: 1.5;
+                             letter-spacing: 1px;
+                             text-transform: $upper;
+                             color: $white;
+                         }
+                         p{
+                             font-size: 1em;
+                            line-height: 1.5;
+                            letter-spacing: 1px;
+                            text-transform: $cap;
+                            color: $white;
+                            padding: 1rem 0;
+                         }
+                         a{
+                             display: inline-block;
+                             padding: .9rem 1.8rem;
+                             border-radius: 5px;
+                             background: #000000;
+                             color: $white;
+                             text-transform: $cap;
+                             word-spacing: 1px;
+                             letter-spacing: 1px;
+                             z-index: 5;
+                             &:hover{
+                                 color: $red;
+                                 transition: $transition;
+                                 font-weight: bold;
+                             }
+                         }
+                         .hvr-radial-out{
+                            transition: $transition;
+                            &::before{
+                                background: #fff;
+                            }
+                        }
+                     }
+                 }
+              } 
+          }
+          .Grid-item1{
+            grid-row-start: 1;
+            grid-row-end: 5;
+            background: url(../image/grid1.png)no-repeat;
+            background-size: 100% 100%;
+            background-position: center;
+            height:  610px;//65vh;
+          }
+        .Grid-item2 {
+            background: url(../image/grid2.png)no-repeat;
+            background-size: 100% 100%;
+            background-position: center;
+            height: 300px;
+            &:hover{
+                .Hvr_cnt{
+                    &::before{
+                        width: 102px!important;
+                        height: 102px!important;
+                        transition: all .5s ease-in-out;
+                    }
+                    &::after{
+                        width: 102px!important;
+                        height: 102px!important;
+                        transition: all .5s ease-in-out;
                     }
                 }
             }
+            .grid-hvr-content{
+                .Hvr_cnt{
+                    &::before{
+                        left: -100px!important;
+                        top: -60px!important;
+                    }
+                    &::after{
+                       right: -100px!important;
+                       bottom: -2px!important;//-213px;
+                   }
+                    h2{
+                        font-size: 1.9em;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        text-transform: $upper;
+                        color: $white;
+                    }
+                    p{
+                       font-size: 1em;
+                       line-height: 1.5;
+                       letter-spacing: 1px;
+                       text-transform: $cap;
+                       color: $white;
+                       padding: 1rem 0;
+                    }
+                    a{
+                        display: inline-block;
+                        padding: .9rem 1.8rem;
+                        border-radius: 5px;
+                        background: #000000;
+                        color: $white;
+                        text-transform: $cap;
+                        word-spacing: 1px;
+                        letter-spacing: 1px;
+                        z-index: 5;
+                        &:hover{
+                            color: $red;
+                            transition: $transition;
+                            font-weight: bold;
+                        }
+                    }
+                    .hvr-radial-out{
+                       transition: $transition;
+                       &::before{
+                           background: #fff;
+                       }
+                   }
+                }
+            }
         }
+        .Grid-item3 { background: url(../image/grid3.png)no-repeat;
+            background-size: 100% 100%;
+            background-position: center;
+            height: 300px;    }
+        .Grid-item4 { background: url(../image/grid4.png)no-repeat;
+            background-size: 100% 100%;
+            background-position: left;
+            height: 300px;    }
+        .Grid-item5 {  background: url(../image/grid5.png)no-repeat;
+            background-size: 100% 100%;
+            background-position: left;
+            height: 300px;  }
+       }    
     }
+
+}
