--- a/css/mixin.scss
+++ b/css/mixin.scss
@@ -29,3 +29,165 @@ $heading:'AlegreyaRegular';
 $p:'RalewayRegular';
 $transition: all .3s ease-in-out;
 
+@mixin  grid-Hvr {
+    &:hover{
+        .grid-hvr-content{
+            opacity: 1;
+            transition: $transition;
+            .Hvr_cnt{
+                &::before{
+                    width: 245px;
+                    height: 245px;
+                    transition: all .5s ease-in-out;
+                }
+                &::after{
+                    width: 245px;
+                    height: 245px;
+                    transition: all .5s ease-in-out;
+                }
+            }
+        }
+        .bottom_Bar{
+           opacity: 0;
+            transition: $transition;
+        }
+     }
+     .grid-hvr-content{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        @include flex;
+        background: #f736249c;
+        z-index: 4;
+        opacity: 0;
+        transition: $transition;
+        .Hvr_cnt{
+            text-align: center;
+            position: relative;
+            &::before{
+                content: '';
+                width: 0px;
+                height: 0px;
+                position: absolute;
+                left: -100px;
+                top: -213px;
+                border-top: 2px solid #fff;
+                border-left: 2px solid #fff;
+                transition: all .5s ease-in-out;
+            }
+            &::after{
+               content: '';
+               width: 0px;
+               height: 0px;
+               position: absolute;
+               right: -100px;
+               bottom: -213px;//-156px;
+               border-bottom: 2px solid #fff;
+               border-right: 2px solid #fff;
+               transition: all .5s ease-in-out;
+           }
+            h2{
+                font-size: 1.9em;
+                line-height: 1.5;
+                letter-spacing: 1px;
+                text-transform: $upper;
+                color: $white;
+            }
+            p{
+                font-size: 1em;
+               line-height: 1.5;
+               letter-spacing: 1px;
+               text-transform: $cap;
+               color: $white;
+               padding: 1rem 0;
+            }
+            a{
+                display: inline-block;
+                padding: .9rem 1.8rem;
+                border-radius: 5px;
+                background: #000000;
+                color: $white;
+                text-transform: $cap;
+                word-spacing: 1px;
+                letter-spacing: 1px;
+                z-index: 5;
+                &:hover{
+                    color: $red;
+                    transition: $transition;
+                    font-weight: bold;
+                }
+            }
+            .hvr-radial-out{
+               transition: $transition;
+               &::before{
+                   background: #fff;
+               }
+           }
+        }
+    }
+}
+@mixin grid-Hvr2 {
+    &:hover{
+        .Hvr_cnt{
+            &::before{
+                width: 131px!important;
+                height: 131px!important;
+                transition: all .5s ease-in-out;
+            }
+            &::after{
+                width: 131px!important;
+                height: 131px!important;
+                transition: all .5s ease-in-out;
+            }
+        }
+    }
+    .grid-hvr-content{
+        .Hvr_cnt{
+            &::before{
+                left: -100px!important;
+                top: -60px!important;
+            }
+            &::after{
+               right: -100px!important;
+               bottom:  -61px !important;//-213px;
+           }
+            h2{
+                font-size: 1.9em;
+                line-height: 1.5;
+                letter-spacing: 1px;
+                text-transform: $upper;
+                color: $white;
+            }
+            p{
+               font-size: 1em;
+               line-height: 1.5;
+               letter-spacing: 1px;
+               text-transform: $cap;
+               color: $white;
+               padding: 1rem 0;
+            }
+            a{
+                display: inline-block;
+                padding: .9rem 1.8rem;
+                border-radius: 5px;
+                background: #000000;
+                color: $white;
+                text-transform: $cap;
+                word-spacing: 1px;
+                letter-spacing: 1px;
+                z-index: 5;
+                &:hover{
+                    color: $red;
+                    transition: $transition;
+                    font-weight: bold;
+                }
+            }
+            .hvr-radial-out{
+               transition: $transition;
+               &::before{
+                   background: #fff;
+               }
+           }
+        }
+    }
+}
