--- a/css/style.scss
+++ b/css/style.scss
@@ -504,4 +504,85 @@
         }
     }
 
+    // ------Book an Appointment------===>
+.Appointment_Wrapper{
+    width: 100%;
+    // height:500px;
+    background: url(../image/appointment_bg.png)no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    margin: 2rem 0 0;
+    padding: 6.5rem 0;
+    position: relative;
+    .Appointment_child{
+        height: 400px;
+        background: url(../image/Ap_bg1.png)no-repeat;
+        background-size: cover;
+        background-position: center;
+        .Appointment_Content{
+            @include flex;
+            justify-content: space-between;
+            // height: 400px;
+            padding: 5rem 0;
+            .Apt_left{
+            width: 30%;
+            }
+            .Apt_right{ 
+                width: 65%;
+            }
+            .Apt_Cmn01{
+                // width: 50%;
+                text-align: center;
+                figure{
+                    position: absolute;
+                    top: 0;
+                    width: 33%;
+                    height: 100%;
+                    overflow: hidden;
+                    left: 70px;
+                    img{
+                        max-width: 64%;
+                    }
+                }
+                h2{
+                    font-size: 3.3em;
+                    text-transform: $cap;
+                    color: $white;
+                    font-weight: bold;
+                    line-height: 1.5;
+                    letter-spacing: 2px;
+                    word-spacing: 7px;
+                    span{
+                        color: #000;
+                    }
+                }
+                p{
+                    text-transform: $cap;
+                    color: $white;
+                    line-height: 2;
+                    letter-spacing: 1px;
+                    word-spacing: 1px;
+                    padding: 1.5rem 0;
+                    font-size: 1.1em;
+                }
+                a{
+                    padding: 1rem 2rem;
+                    color: #fff;
+                    background: linear-gradient(
+                165deg
+                ,#f73624 46%, #000000eb );
+                    font-size: 1.4em;
+                    display: inline-block;
+                    margin: 1.4rem 0 0;
+                    border-radius: 100px;
+                    box-shadow: 0px 3px 3px 2px #000;
+                
+                }
+            }
+        }
+  }
+}
+
+
 }
